fix(website): ensure the nav menu renders nicely on mobile systems

--- a/packages/website/builder/css/nav.css
+++ b/packages/website/builder/css/nav.css
@@ -149,10 +149,8 @@
   background-color: #fafafa;
 }
 
-.nav_page-item.nav_open > .nav_item-name > a,
-.nav_link.nav_open > a {
+.nav_page-item.nav_open > a.nav_item-name {
   font-weight: bold;
-  color: #0086b3 !important;
 }
 
 .nav_toggle {
@@ -165,7 +163,7 @@
 
 .nav_toggle,
 .nav_toggle-label::before {
-  font-family: "Courier New", monospace;
+  font-family: monospace, monospace;
   cursor: pointer;
   margin: 0;
   border: none !important;
@@ -197,7 +195,7 @@
 }
 
 .nav_toggle:checked + .nav_toggle-label {
-  font-weight: bold;
+  /*font-weight: bold;*/
 }
 
 .nav_section-item > .nav_toggle {
@@ -210,11 +208,20 @@
   color: #cacaca;
   position: absolute;
   right: 0;
-  font-family: "Courier New", monospace;
+  font-family: monospace, monospace;
 }
 
 .nav_section-item > .nav_toggle:checked:hover + .nav_section::after {
   content: '−';
+}
+
+#nav_home > span {
+  font-size: x-small;
+  display: flex;
+  align-items: center;
+}
+#nav_home > span:before {
+  font-weight: bold;
 }
 
 /* === buttons === */
